--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.9",
     "@types/jasmine": "^3.6.3",
     "@types/jsonwebtoken": "^9.0.2",
